#41 Fix word wrap

--- a/src/components/DayTasks/styles.module.scss
+++ b/src/components/DayTasks/styles.module.scss
@@ -63,6 +63,7 @@
 }
 
 .DayTaskField {
+  width: 100%;
   min-height: 22px;
   line-height: 22px;
   resize: none;
